# packagesetup

./: .gitignore  README.md
mymathlib/: README.md  pyproject.toml  requirements.txt  setup.py
mymathlib/docs/: getting_started.md
mymathlib/examples/: advanced_usage.py  basic_usage.py
mymathlib/src/mymathlib/: __init__.py  advanced.py  constants.py  core.py
mymathlib/src/mymathlib.egg-info/: PKG-INFO  SOURCES.txt
mymathlib/tests/: test_advanced.py  test_constants.py  test_core.py
